[gd_scene load_steps=4 format=3 uid="uid://bvpjlwvl4r1go"]

[ext_resource type="Script" path="res://Components/LabelManagement/manage_label_item.gd" id="1_8iy6m"]
[ext_resource type="Theme" uid="uid://du2pqa4sphe8i" path="res://Resources/StandardTheme.tres" id="1_iy3mb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_obc32"]
bg_color = Color(0.690196, 0.196078, 0.196078, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="ManageLabelItem" type="Control"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 3
anchor_bottom = 0.047
offset_bottom = -34.78
theme = ExtResource("1_iy3mb")
script = ExtResource("1_8iy6m")

[node name="LabelContainer" type="HBoxContainer" parent="."]
layout_mode = 1
offset_right = 46.0
offset_bottom = 35.0
theme_override_constants/separation = 10

[node name="RemoveButton" type="Button" parent="LabelContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_obc32")
theme_override_styles/hover = SubResource("StyleBoxFlat_obc32")
theme_override_styles/pressed = SubResource("StyleBoxFlat_obc32")
text = "-"

[node name="LabelLabel" type="Label" parent="LabelContainer"]
layout_mode = 2

[connection signal="button_up" from="LabelContainer/RemoveButton" to="." method="_on_remove_button_button_up"]
